# first-rust-web-app

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 20250203031112_init.down.sql  20250203031112_init.up.sql  20250205142313_add_login.down.sql  20250205142313_add_login.up.sql
backend/src/: config.rs  handler.rs  jwt_auth.rs  main.rs  model.rs
backend/src/users/: mod.rs  model.rs  routes.rs  schema.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  index.html  tailwind.config.js
frontend/src/: api.rs  main.rs  store.rs
frontend/src/components/: alert.rs  feedback_item.rs  feedback_list.rs  feedback_stats.rs  input.rs  login_form.rs  mod.rs  navbar.rs  register_form.rs
frontend/styles/: tailwind.css
