[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.11.0"
reqwasm = "0.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
uuid = { version = "1.12.1", features = ["serde", "v4", "js"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["HtmlInputElement", "Window"] }
yew = { version = "0.21.0", features = ["csr"] }
yewdux = "0.10.0"
common = { version = "0.1.0", path = "../common" }
yew-router = "0.18.0"


